--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
                    </div>
                   <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="..." class="d-block w-100" alt="...">
+                            <img src="...." class="d-block w-100" alt="...">
                          </div>
 
                         <div class="carousel-item">
