adicionando mais graficos

--- a/src/index.html
+++ b/src/index.html
@@ -48,15 +48,15 @@
                         </div>
 
                         <div class="carousel-item">
-                          <img src="." class="d-block w-100 imagem-carrosel-um" alt="...">
+                          <img src="./assets/imagens/total de vitorias.jpg" class="d-block w-100 imagem-carrosel-um" alt="...">
                         </div>
 
                         <div class="carousel-item">
-                          <img src="." class="d-block w-100 imagem-carrosel-um" alt="...">
+                          <img src="./assets/imagens/total.jpg" class="d-block w-100 imagem-carrosel-um" alt="...">
                        </div>
 
                         <div class="carousel-item">
-                          <img src="." class="d-block w-100 imagem-carrosel-um" alt="...">
+                          <img src="./assets/imagens/faltas.jpeg" class="d-block w-100 imagem-carrosel-um" alt="...">
                         </div>
 
                 </div>
